--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,20 @@
 <resources>
-    <string name="app_name">AgoraMeta</string>
+    <string name="app_name">JoyyMeta</string>
     <string name="uid">用户ID</string>
     <string name="channel_id">频道ID</string>
     <string name="join_channel">进频道</string>
     <string name="leave_channel">退频道</string>
-    <string name="req_token">请求token</string>
+    <string name="init_rtc">初始化RTC</string>
     <string name="start_music_dance">开启跳舞</string>
     <string name="stop_music_dance">停止跳舞</string>
     <string name="start_music_beat">开启节拍</string>
     <string name="stop_music_beat">停止节拍</string>
     <string name="game_view_content_description">Game view</string>
+    <string name="metabolt_function">Metabolt Example</string>
+    <string name="metabolt_type_agora">agora</string>
+    <string name="metabolt_type_agora_desc">agora通道展示Metabolt虚拟人</string>
+    <string name="metabolt_type_trtc">TRTC</string>
+    <string name="metabolt_type_trtc_desc">TRTC通道展示Metabolt虚拟人</string>
+    <string name="metabolt_type_thunder">Thunder</string>
+    <string name="metabolt_type_thunder_desc">TRTC通道展示Metabolt虚拟人</string>
 </resources>
