--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,8 @@
     <string name="stop_music_dance">停止跳舞</string>
     <string name="start_music_beat">开启节拍</string>
     <string name="stop_music_beat">停止节拍</string>
-    <string name="metabolt_function">Metabolt Example</string>
-    <string name="metabolt_type_agora">agora</string>
-    <string name="metabolt_type_agora_desc">agora通道展示Metabolt虚拟人</string>
+    <string name="metabolt_type_agora">Agora</string>
+    <string name="metabolt_type_agora_desc">Agora通道展示Metabolt虚拟人</string>
     <string name="metabolt_type_trtc">TRTC</string>
     <string name="metabolt_type_trtc_desc">TRTC通道展示Metabolt虚拟人</string>
     <string name="metabolt_type_thunder">Thunder</string>
